--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.quaddro.emprestes.qandroid100">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name=".controller.SplashActivity"
@@ -20,6 +22,6 @@
         <activity android:name=".controller.MegaSenaActivity" />
         <activity android:name=".controller.AnimacaoActivity" />
         <activity android:name=".controller.SpinnerActivity" />
+        <activity android:name=".controller.CameraActivity" />
     </application>
-
 </manifest>
