--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'com.flipkart.springyheads:library:0.9.6'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile project(":core")
     testCompile 'junit:junit:4.12'
