--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
     }
     productFlavors {
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
@@ -26,10 +30,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'com.flipkart.springyheads:library:0.9.6'
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile project(":core")
+    compile project(':core')
     testCompile 'junit:junit:4.12'
     testCompile 'junit-addons:junit-addons:1.4'
 }
