--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,5 +33,6 @@
         <activity android:name=".controller.AlterarCarroActivity" />
         <activity android:name=".controller.SQLiteActivity" />
         <activity android:name=".controller.MensagemActivity" />
+        <activity android:name=".controller.NovaMensagemActivity" />
     </application>
 </manifest>
