--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.quaddro.emprestes.qandroid100">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -35,7 +36,16 @@
         <activity android:name=".controller.MensagemActivity" />
         <activity android:name=".controller.NovaMensagemActivity" />
         <activity android:name=".controller.AlterarMensagemActivity" />
+        <activity android:name=".controller.JogoBolaActivity" />
 
         <service android:name=".controller.MensagemService" />
+
+        <receiver android:name=".content.MessageBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
