--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.quaddro.emprestes.qandroid100">
 
+    <uses-feature android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -38,6 +41,7 @@
         <activity android:name=".controller.NovaMensagemActivity" />
         <activity android:name=".controller.AlterarMensagemActivity" />
         <activity android:name=".controller.JogoBolaActivity" />
+        <activity android:name=".controller.SensorActivity" />
 
         <service android:name=".controller.MensagemService" />
 
