--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     })
     compile 'com.flipkart.springyheads:library:0.9.6'
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile project(':core')
     testCompile 'junit:junit:4.12'
     testCompile 'junit-addons:junit-addons:1.4'
