--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.quaddro.emprestes.qandroid100">
 
-    <uses-feature android:name="android.hardware.sensor.accelerometer"
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
         android:required="true" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -16,9 +17,14 @@
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
-        <activity android:name=".controller.SplashActivity"
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".controller.SplashActivity"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,9 +32,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".controller.LoginActivity"
+        <activity
+            android:name=".controller.LoginActivity"
             android:noHistory="true" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".controller.OiActivity" />
         <activity android:name=".controller.MegaSenaActivity" />
@@ -39,7 +47,8 @@
         <activity android:name=".controller.DrawerActivity" />
         <activity android:name=".controller.ChatHeadActivity" />
         <activity android:name=".controller.SharedPreferenceActivity" />
-        <activity android:name=".controller.FileCSVActivity"
+        <activity
+            android:name=".controller.FileCSVActivity"
             android:theme="@style/Base.Theme.AppCompat.CompactMenu" />
         <activity android:name=".controller.NovoCarroActivity" />
         <activity android:name=".controller.AlterarCarroActivity" />
@@ -52,6 +61,7 @@
         <activity android:name=".controller.GPSActivity" />
         <activity android:name=".controller.CEPActivity" />
         <activity android:name=".controller.BoundActivity" />
+        <activity android:name=".controller.ASyncActivity" />
 
         <service android:name=".controller.MensagemService" />
         <service android:name=".controller.CEPService" />
@@ -61,20 +71,39 @@
             <intent-filter>
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
         <receiver android:name=".content.CallReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
         <receiver android:name=".content.SMSReceiver">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".controller.MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
     </application>
+
 </manifest>
