--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -62,6 +64,8 @@
         <activity android:name=".controller.CEPActivity" />
         <activity android:name=".controller.BoundActivity" />
         <activity android:name=".controller.ASyncActivity" />
+        <activity android:name=".controller.ContactsActivity" />
+        <activity android:name=".controller.PlayerActivity" />
 
         <service android:name=".controller.MensagemService" />
         <service android:name=".controller.CEPService" />
